[package]
name = "geveze"
version = "0.1.0"
authors = ["Ozan Yıldız <developer@yildizozan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "geveze"
path = "src/main.rs"

[dependencies]
#lambda_runtime = "0.2.1"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.10" }
